--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <!-- Calculator container -->
+  <div class="calculator">
+    <!-- Display screen for the calculator -->
+    <input type="text" class="calculator-screen" id="screen" title="Calculator Screen" placeholder="0" disabled>
+
+    <!-- Container for calculator buttons -->
+    <div class="calculator-keys">
+      <!-- Operator buttons -->
+      <button class="operator" value="+">+</button>
+      <button class="operator" value="-">-</button>
+      <button class="operator" value="*">&times;</button>
+      <button class="operator" value="/">&divide;</button>
+
+      
+    </div>
+  </div>
 </body>
 </html>
