--- a/index.html
+++ b/index.html
@@ -21,8 +21,30 @@
       <button class="operator" value="*">&times;</button>
       <button class="operator" value="/">&divide;</button>
 
-      
+      <!-- Number buttons -->
+      <button value="7">7</button>
+      <button value="8">8</button>
+      <button value="9">9</button>
+
+      <button value="4">4</button>
+      <button value="5">5</button>
+      <button value="6">6</button>
+
+      <button value="1">1</button>
+      <button value="2">2</button>
+      <button value="3">3</button>
+
+      <button value="0">0</button>
+      <button class="decimal" value=".">.</button>
+      <!-- All clear button -->
+      <button class="all-clear" value="all-clear">AC</button>
+
+      <!-- Equal sign button -->
+      <button class="equal-sign" value="=">=</button>
     </div>
   </div>
+
+  <!-- Link to the JavaScript file for the calculator functionality -->
+  <script src="script.js"></script>
 </body>
 </html>
