Code Quality & Functionality Improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 
     <!-- Container for calculator buttons -->
     <div class="calculator-keys">
-      <!-- Number buttons -->
+      <!-- Memory and utility buttons row -->
+      <button class="memory" value="MC" aria-label="Memory Clear">MC</button>
+      <button class="memory" value="MR" aria-label="Memory Recall">MR</button>
+      <button class="memory" value="MS" aria-label="Memory Store">MS</button>
+      <button class="backspace" value="backspace" aria-label="Backspace">⌫</button>
+      
+      <!-- Number and operator buttons -->
       <button value="7" aria-label="7">7</button>
       <button value="8" aria-label="8">8</button>
       <button value="9" aria-label="9">9</button>
